[gd_scene load_steps=10 format=3 uid="uid://dspbvg6r8sxo4"]

[ext_resource type="Script" path="res://Looker/Settings/SettingsScene.gd" id="1_unp4l"]
[ext_resource type="Texture2D" uid="uid://dqgy48nm5bhkx" path="res://Sprites/Settings/audio1.png" id="2_ls726"]
[ext_resource type="Texture2D" uid="uid://83jhuptninmi" path="res://Sprites/Settings/general1.png" id="2_rsac4"]
[ext_resource type="Texture2D" uid="uid://c4h7e341vd615" path="res://Sprites/Settings/audio2.png" id="3_s1q2h"]
[ext_resource type="Texture2D" uid="uid://p3vyetkbxael" path="res://Sprites/Settings/general2.png" id="3_tgk2f"]
[ext_resource type="Texture2D" uid="uid://djndc8sl4ys31" path="res://Sprites/Settings/general3.png" id="4_fqxui"]
[ext_resource type="Texture2D" uid="uid://cwtupnxeq5f40" path="res://Sprites/Settings/audio3.png" id="4_kug1x"]
[ext_resource type="PackedScene" uid="uid://bnn4ud7vmw2pi" path="res://Looker/Settings/SettingsGeneralTab.tscn" id="8_fn3ej"]
[ext_resource type="PackedScene" uid="uid://vyiolgahgouw" path="res://Looker/Settings/SettingsAudioTab.tscn" id="9_6yh00"]

[node name="SettingsScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_unp4l")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.219608, 0.211765, 0.2, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
offset_right = 116.0
offset_bottom = 373.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16

[node name="Tabs" type="VFlowContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/v_separation = 10

[node name="TabButtons" type="HBoxContainer" parent="MarginContainer/Tabs"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="GeneralTabButton" type="TextureButton" parent="MarginContainer/Tabs/TabButtons"]
layout_mode = 2
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("2_rsac4")
texture_pressed = ExtResource("3_tgk2f")
texture_hover = ExtResource("4_fqxui")

[node name="AudioTabButton" type="TextureButton" parent="MarginContainer/Tabs/TabButtons"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_ls726")
texture_pressed = ExtResource("3_s1q2h")
texture_hover = ExtResource("4_kug1x")

[node name="GeneralTab" parent="MarginContainer/Tabs" instance=ExtResource("8_fn3ej")]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="AudioTab" parent="MarginContainer/Tabs" instance=ExtResource("9_6yh00")]
visible = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="MasterVolumeLabel" parent="MarginContainer/Tabs/AudioTab" index="0"]
text = "Master"

[node name="MusicVolumeLabel" parent="MarginContainer/Tabs/AudioTab" index="2"]
text = "Music"

[node name="EffectsVolumeLabel" parent="MarginContainer/Tabs/AudioTab" index="4"]
text = "Effects
"

[connection signal="focus_entered" from="MarginContainer/Tabs/GeneralTab/TextSpeedSlider" to="." method="_on_text_speed_slider_focus_entered"]
[connection signal="focus_entered" from="MarginContainer/Tabs/AudioTab/MasterVolumeSlider" to="." method="_on_master_volume_slider_focus_entered"]

[editable path="MarginContainer/Tabs/GeneralTab"]
[editable path="MarginContainer/Tabs/AudioTab"]
